RESOLVED FIXED 249725
[Cocoa] Softlink macros are not thread safe
https://bugs.webkit.org/show_bug.cgi?id=249725
Summary [Cocoa] Softlink macros are not thread safe
Eric Carlson
Reported 2022-12-21 09:49:03 PST
Only use soft link macros on the main thread.
Attachments
Eric Carlson
Comment 1 2022-12-21 09:53:55 PST
Eric Carlson
Comment 2 2022-12-21 10:00:22 PST
EWS
Comment 3 2022-12-22 09:15:00 PST
Committed 258244@main (b96cc31eec98): <https://commits.webkit.org/258244@main> Reviewed commits have been landed. Closing PR #7963 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.