Cherry-pick b96cc31eec98. rdar://problem/103003618

[Cocoa] Softlink macros are not thread safe
    https://bugs.webkit.org/show_bug.cgi?id=249725
    rdar://103003618

    Reviewed by Dean Jackson.

    Load and cache AVCaptureDeviceType constants in the AVCaptureDeviceManager constructor,
    which is always called on the main thread, so they can be used on the dispatch queue
    used to discover the current capture devices.

    * Source/WebCore/platform/mediastream/mac/AVCaptureDeviceManager.h:
    * Source/WebCore/platform/mediastream/mac/AVCaptureDeviceManager.mm:
    (WebCore::AVCaptureDeviceManager::currentCameras): Use m_avCaptureDeviceTypes instead
    of the soft link functions directly.
    (WebCore::AVCaptureDeviceManager::AVCaptureDeviceManager): Cache AVCaptureDeviceType constants.
    (WebCore::currentCameras): Deleted.

    Canonical link: https://commits.webkit.org/258244@main

Canonical link: https://commits.webkit.org/252432.962@safari-7614.4.4.11-branch